objects/RFQ_Supplier__c.object
<CustomObject>
    <fields>
        <fullName>RFQ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFQ</label>
        <referenceTo>Request_for_Quotation__c</referenceTo>
        <relationshipLabel>RFQ Suppliers</relationshipLabel>
        <relationshipName>RFQ_Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Date__c</fullName>
        <label>Selected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RFQ Suppliers</relationshipLabel>
        <relationshipName>RFQ_Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RFQ Supplier</label>
    <nameField>
        <displayFormat>RS-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFQ Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>